--- a/css/style.css
+++ b/css/style.css
@@ -155,3 +155,17 @@ a.navbar-brand{
   right: 20px;
   bottom: 10px;
 }
+.servicos{
+  padding-top: 100px;
+  padding-bottom: 150px;
+
+}
+.hint-title{
+  color: var(--color-primary) !important;
+  font-size: 25px;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+.title{
+  color: var(--color-black);
+}
