--- a/css/style.css
+++ b/css/style.css
@@ -191,3 +191,46 @@ a.navbar-brand{
   color: var(--color-black);
   margin-bottom: 10px;
 }
+.background-servicos{
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 600px;
+  background-image: url(../img/bg-icons-2.png);
+}
+.cardapio{
+  padding-top: 50px;
+  padding-bottom: 150px;
+}
+.container-menu a{
+  text-decoration: none;
+}
+.card-item{
+  height: 360px;
+}
+.card-item .img-produto img{
+  width: 100%;
+  border-radius: 11px;
+}
+.card-item .title-produto{
+  color: var(--color-black);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  height: 40px;
+  margin-bottom: 0;
+}
+.card-item .price-produto{
+  color: var(--color-primary);
+  font-size: 24px;
+
+}
+.container-menu{
+  margin-bottom: 40px;
+}
+.card-item .add-carrinho{
+  /* display: none; */
+  text-align: center;
+  height: 20px;
+  justify-content: center;
+  align-items: center;
+}
