--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 :root{
   --color-background: #fffdf7;
   --color-black: #211221;
+  --color-black-heavy:#000000;
   --color-text: #4f4f4f;
   --color-text-out: #909083;
   --color-primary: #ffbf00;
@@ -27,6 +28,9 @@ html, body{
 }
 b{
   font-family: 'PoppinsMedium';
+}
+.hidden{
+  display: none !important;
 }
 .color-primary{
   color: var(--color-primary);
@@ -165,12 +169,14 @@ a.navbar-brand{
   font-size: 25px;
   text-transform: uppercase;
   letter-spacing: 5px;
+  font-family: 'Poppins';
 }
 .title{
   color: var(--color-black);
   font-size: 40px;
   margin-top: 5px;
   margin-bottom: 30px;
+  font-family: 'Poppins';
 }
 .card-icon{
   height: 150px;
@@ -202,11 +208,18 @@ a.navbar-brand{
   padding-top: 50px;
   padding-bottom: 150px;
 }
+.cardapio .background-cardapio{
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 500px;
+  background-image: url(../img/bg-icons-1.png);
+}
 .container-menu a{
   text-decoration: none;
 }
 .card-item{
-  height: 360px;
+  height: 380px;
 }
 .card-item .img-produto img{
   width: 100%;
@@ -228,9 +241,174 @@ a.navbar-brand{
   margin-bottom: 40px;
 }
 .card-item .add-carrinho{
-  /* display: none; */
+  display: none;
   text-align: center;
-  height: 20px;
+  height: 30px;
   justify-content: center;
   align-items: center;
+}
+.btn-menos{
+  color: var(--color-black-heavy);
+  padding: 6.5px 7px;
+  border: 2px solid var(--color-black-heavy);
+  border-top-left-radius: 10px;
+  border-bottom-left-radius:10px ;
+  font-size: 14px;
+  cursor: pointer;
+}
+.btn-mais{
+  color: var(--color-black-heavy);
+  padding: 6.5px 7px;
+  border: 2px solid var(--color-black-heavy);
+  border-top-right-radius: 10px;
+  border-bottom-right-radius:10px ;
+  font-size: 14px;
+  cursor: pointer;
+}
+.add-numero-itens{
+  color: var(--color-black-heavy);
+  padding: 2px 15px;
+  border-top: 2px solid var(--color-black-heavy);
+  border-bottom: 2px solid var(--color-black-heavy);
+  font: 14px;
+}
+.btn-add{
+  border: 2px solid var(--color-black-heavy);
+  font-size: 16px;
+  padding: 4px 10px;
+  border-radius: 10px;
+  color: var(--color-white);
+  background-color: var(--color-black-heavy);
+  margin-left: 15px;
+}
+.card-item:hover{
+  background-color: var(--color-primary);
+
+}
+.card-item:hover .title-produto{
+  display: none;
+
+}
+.card-item:hover .add-carrinho{
+  display: flex;
+}
+.card-item:hover .price-produto{
+  color: var(--color-black-heavy) !important;
+  margin-top: 20px;
+}
+.depoimentos{
+  padding-top: 100px;
+  padding-bottom: 150px;
+}
+.background-depoimentos{
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 500px;
+  background-image: url(../img/bg-icons-1.png) ;
+}
+.card-depoimentos{
+  height: 390px;
+  width: 390px;
+  border-radius: 120px;
+  background-color: var(--color-secondary);
+  position: absolute;
+  left: 0;
+}
+.container-dados-depoimento{
+  display: flex;
+}
+.depoimento{
+  margin-top: 70px;
+}
+.imagem-depoimento{
+  width: 65px;
+  height: 65px;
+  background-color: var(--color-white);
+  border-radius: 50px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 15px;
+}
+#depoimento-1 .imagem-depoimento{
+  background-image: url(../img/diego.jpg);
+  background-size: cover;
+}
+#depoimento-2 .imagem-depoimento{
+  background-image: url(../img/ana.jpg);
+  background-size: cover;
+}
+#depoimento-3 .imagem-depoimento{
+  background-image: url(../img/joao.jpg);
+  background-size: cover;
+}
+.nome-depoimento{
+  color: var(--color-black);
+  font-size: 22px;
+  margin-bottom: 5px;
+}
+.nota-depoimento{
+  color: var(--color-primary);
+}
+.nome-depoimento span{
+  color: var(--color-black);
+}
+.texto-depoimento{
+  display: flex;
+  font-size: 16px;
+  color:var(--color-black);
+}
+.texto-depoimento i{
+  font-size: 35px;
+  color: var(--color-primary);
+}
+.texto-depoimento i:first-child{
+  padding-left: 10px;
+  padding-right: 35px;
+}
+.texto-depoimento i:last-child{
+  padding-left: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+.reserva{
+  padding-top: 100px;
+  padding-bottom: 150px;
+}
+.card-secondary{
+  background-color: var(--color-secondary);
+  border-radius: 70px;
+  padding: 90px;
+}
+.card-reserva{
+  height: 320px;
+  width: 320px;
+  border-radius: 120px;
+  background-color: var(--color-white);
+  position: absolute;
+  right: 0;
+  top: -25px;
+}
+.reserva .img-banner img{
+  width: 100%;
+}
+footer{
+  background-color: var(--color-secondary);
+}
+.logo-footer{
+  width: 150px;
+}
+.container-logo-footer, .container-texto-footer, .container-redes-footer{
+  display: flex;
+  align-items: center;
+}
+.container-logo-footer{
+  justify-content: start;
+}
+.container-texto-footer{
+  justify-content: center;
+}
+.container-redes-footer{
+  justify-content: end;
 }
