--- a/css/style.css
+++ b/css/style.css
@@ -677,3 +677,21 @@ a{
 .toast.green{
   background-color: var(--color-freen);
 }
+.carrinho-vazio{
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 50px;
+
+}
+.carrinho-vazio i{
+  width: 50px;
+  height: 50px;
+  background-color: var(--color-secondary);
+  color: var(--color-primary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  border-radius: 50px;
+  margin-bottom: 10px;
+}
